Fix jumpy right position of selected items counter
The negative right margin counteracts the sticky footer being wider than
its containing column. This is only the case when it’s actually sticky.

--- a/app/assets/stylesheets/components/message.scss
+++ b/app/assets/stylesheets/components/message.scss
@@ -110,9 +110,14 @@
 
   &-selected-counter {
     position: absolute;
-    right: $gutter-half;
+    right: 0;
     top: $gutter - 1px;
     color: $secondary-text-colour;
+
+    .content-fixed & {
+      right: $gutter-half;
+    }
+
   }
 
 }
